@@ -1,6 +1,6 @@
 <HR>
 <P>Copyright 1993-2001 Easy Software Products, All Rights Reserved. 
-The Common UNIX Printing System, CUPS, the CUPS logo, and ESP Print Pro 
+The Common UNIX Printing System, CUPS, and the CUPS logo
 are the trademark property of <A HREF="http://www.easysw.com">Easy Software Products</A>. 
 All other trademarks are the property of their respective owners.
 </BODY>
